additional responsive changes

--- a/confirmation.html
+++ b/confirmation.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Header -->
   <header class="header blur">
-    <a href="index.html" class="header__logo">
+    <a href="index.html" class="header__logo" aria-label="MMU Click and Collect home">
       <img src="images/MMU_logo_alt.png" alt="Manchester Metropolitan University logo">
     </a>
     <nav class="header__nav">
@@ -33,7 +33,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
         <li><a href="#">Home</a></li>
-        <li><a href="index.html">Click and Collect</a></li>
+        <li><a href="index.html">Library Search</a></li>
         <li><a href="request.html">Item Request</a></li>
         <li><a aria-current="page">Confirmation</a></li>
       </ol>
@@ -44,7 +44,7 @@
       <h1 id="confirmation-title">Your request has been placed!</h1>
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-to-collect">
-        <h3 id="confirmation-to-collect">To collect:</h3>
+        <h2 id="confirmation-to-collect">To collect:</h2>
         <div class="confirmation-card__row">
           <i class="fas fa-book-open" aria-hidden="true"></i>
           <p>Hello Web Designby Tracy Osborn</p>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-library">
-        <h3 id="confirmation-library">From MMU Library:</h3>
+        <h2 id="confirmation-library">From MMU Library:</h2>
         <div class="confirmation-card__row">
           <i class="fas fa-location-dot" aria-hidden="true"></i>
           <p>John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-when">
-        <h3 id="confirmation-when">When will my order be ready to collect?</h3>
+        <h2 id="confirmation-when">When will my order be ready to collect?</h2>
         <div class="confirmation-card__row">
           <i class="far fa-clock" aria-hidden="true"></i>
           <p>Use the Click and Collect tracking in your library account to find out when your item will be ready to collect.</p>
