--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Header -->
   <header class="header blur">
-    <a href="index.html" class="header__logo">
+    <a href="index.html" class="header__logo" aria-label="MMU Click and Collect home">
       <img src="images/MMU_logo_alt.png" alt="Manchester Metropolitan University logo">
     </a>
     <nav class="header__nav">
@@ -33,7 +33,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
         <li><a href="#">Home</a></li>
-        <li><a href="index.html" aria-current="page">Click and Collect</a></li>
+        <li><a href="index.html" aria-current="page">Library Search</a></li>
       </ol>
     </nav>
 
@@ -73,7 +73,7 @@
             <p>Tracy Osborn</p>
             <p>Hello Web Design will teach you design principles and handy shortcuts so you can feel confident designing.</p>
             <div class="book-card__actions">
-              <button class="btn btn--secondary" aria-label="View details">View details</button>
+              <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <p>Ben Coleman</p>
             <p>Coleman examines a key cultural shift from analog to digital, defining "x-reality" as the continuum between online and offline worlds.</p>
             <div class="book-card__actions">
-              <button class="btn btn--secondary" aria-label="View details">View details</button>
+              <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
@@ -107,7 +107,7 @@
             <p>Alexandra Watkins</p>
             <p>Naming a business is challenging yet crucial; Watkins offers a foolproof model to help anyone evaluate brand names like a pro.</p>
             <div class="book-card__actions">
-              <button class="btn btn--secondary" aria-label="View details">View details</button>
+              <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
@@ -124,7 +124,7 @@
             <p>Alice Rawsthorn</p>
             <p>Explores what design is, why it matters, makes it good or bad, how it differs from style, and Apple's appeal.</p>
             <div class="book-card__actions">
-              <button class="btn btn--secondary" aria-label="View details">View details</button>
+              <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
@@ -157,7 +157,7 @@
       </nav>
 
       <div class="footer__socials">
-        <h3>Connect with us!</h3>
+        <h2>Connect with us!</h2>
         <div class="socials">
           <a href="#" aria-label="Facebook"><i class="fab fa-facebook" aria-hidden="true"></i></a>
           <a href="#" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
