--- a/request.html
+++ b/request.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Header -->
   <header class="header blur">
-    <a href="index.html" class="header__logo">
+    <a href="index.html" class="header__logo" aria-label="MMU Click and Collect home">
       <img src="images/MMU_logo_alt.png" alt="Manchester Metropolitan University logo">
     </a>
     <nav class="header__nav">
@@ -33,7 +33,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
         <li><a href="#">Home</a></li>
-        <li><a href="index.html">Click and Collect</a></li>
+        <li><a href="index.html">Library Search</a></li>
         <li><a href="request.html" aria-current="page">Item Request</a></li>
       </ol>
     </nav>
@@ -54,7 +54,7 @@
     </article>
 
     <div>
-        <h3>Collection Information</h3>
+        <h2>Collection Information</h2>
         <div class="collection__info">
         <p><i class="far fa-clock" aria-hidden="true"></i> Open Today: 9am–7pm</p>
         <p><i class="fas fa-location-dot" aria-hidden="true"></i> John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
