--- a/request.html
+++ b/request.html
@@ -29,7 +29,7 @@
   </header>
 
   <!-- Main Content -->
-  <main class="main">
+  <main class="main request__page">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
         <li><a href="#">Home</a></li>
