--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
             <img src="images/hellowd.jpg" alt="Hello Web Design book cover by Tracy Osborn" class="book-card__image">
           </div>
           <div class="book-card__content">
-            <h2 id="book-title-1">Hello Web Design</h2>
-            <p>Tracy Osborn</p>
-            <p>Hello Web Design will teach you design principles and handy shortcuts so you can feel confident designing.</p>
+            <div class="book-card__body">
+              <div class="book-card__header">
+                <h2 id="book-title-1">Hello Web Design</h2>
+                <p>Tracy Osborn</p>
+              </div>
+              <p>Hello Web Design will teach you design principles and handy shortcuts so you can feel confident designing.</p>
+            </div>
             <div class="book-card__actions">
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
@@ -86,9 +90,13 @@
             <img src="images/helloavatar.jpg" alt="Hello Avatar book cover by Ben Coleman" class="book-card__image">
           </div>
           <div class="book-card__content">
-            <h2 id="book-title-2">Hello Avatar</h2>
-            <p>Ben Coleman</p>
-            <p>Coleman examines a key cultural shift from analog to digital, defining "x-reality" as the continuum between online and offline worlds.</p>
+            <div class="book-card__body">
+              <div class="book-card__header">
+                <h2 id="book-title-2">Hello Avatar</h2>
+                <p>Ben Coleman</p>
+              </div>
+              <p>Coleman examines a key cultural shift from analog to digital, defining "x-reality" as the continuum between online and offline worlds.</p>
+            </div>
             <div class="book-card__actions">
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
@@ -103,9 +111,13 @@
             <img src="images/helloawesome.jpg" alt="Hello, My Name is Awesome book cover by Alexandra Watkins" class="book-card__image">
           </div>
           <div class="book-card__content">
-            <h2 id="book-title-3">Hello, My Name is Awesome</h2>
-            <p>Alexandra Watkins</p>
-            <p>Naming a business is challenging yet crucial; Watkins offers a foolproof model to help anyone evaluate brand names like a pro.</p>
+            <div class="book-card__body">
+              <div class="book-card__header">
+                <h2 id="book-title-3">Hello, My Name is Awesome</h2>
+                <p>Alexandra Watkins</p>
+              </div>
+              <p>Naming a business is challenging yet crucial; Watkins offers a foolproof model to help anyone evaluate brand names like a pro.</p>
+            </div>
             <div class="book-card__actions">
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
@@ -120,9 +132,13 @@
             <img src="images/helloworld.jpg" alt="Hello World book cover by Alice Rawsthorn" class="book-card__image">
           </div>
           <div class="book-card__content">
-            <h2 id="book-title-4">Hello World</h2>
-            <p>Alice Rawsthorn</p>
-            <p>Explores what design is, why it matters, makes it good or bad, how it differs from style, and Apple's appeal.</p>
+            <div class="book-card__body">
+              <div class="book-card__header">
+                <h2 id="book-title-4">Hello World</h2>
+                <p>Alice Rawsthorn</p>
+              </div>
+              <p>Explores what design is, why it matters, makes it good or bad, how it differs from style, and Apple's appeal.</p>
+            </div>
             <div class="book-card__actions">
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
