--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           </div>
           <div class="book-card__content">
             <div class="book-card__body">
+              <span class="book-card__tag">Web Design</span>
               <div class="book-card__header">
                 <h2 id="book-title-1">Hello Web Design</h2>
                 <p>Tracy Osborn</p>
@@ -91,6 +92,7 @@
           </div>
           <div class="book-card__content">
             <div class="book-card__body">
+              <span class="book-card__tag">Digital Culture</span>
               <div class="book-card__header">
                 <h2 id="book-title-2">Hello Avatar</h2>
                 <p>Ben Coleman</p>
@@ -112,6 +114,7 @@
           </div>
           <div class="book-card__content">
             <div class="book-card__body">
+              <span class="book-card__tag">Branding</span>
               <div class="book-card__header">
                 <h2 id="book-title-3">Hello, My Name is Awesome</h2>
                 <p>Alexandra Watkins</p>
@@ -133,6 +136,7 @@
           </div>
           <div class="book-card__content">
             <div class="book-card__body">
+              <span class="book-card__tag">Design Theory</span>
               <div class="book-card__header">
                 <h2 id="book-title-4">Hello World</h2>
                 <p>Alice Rawsthorn</p>
