--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
     <h1>Library Click and Collect</h1>
 
+   <!-- Search Function -->
+
     <section aria-label="Search and filter controls">
       <div class="search-bar">
         <input type="text" placeholder="Search for books by name, author or subject" aria-label="Search books">
