--- a/confirmation.html
+++ b/confirmation.html
@@ -32,11 +32,7 @@
   <main class="main confirmation-page">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
-        <li><a href="#">Home</a></li>
-        <li><a href="index.html">Library Search</a></li>
-        <li><a href="#">Hello Web Design</a></li>
-        <li><a href="request.html">Item Request</a></li>
-        <li><a aria-current="page">Confirmation</a></li>
+        <li><a href="request.html">Back</a></li>
       </ol>
     </nav>
 
