--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       <article class="book-card" aria-labelledby="book-title-1">
         <div class="book-card__inner">
           <div class="book-card__cover">
+            <button class="book-card__save" aria-label="Save this book">
+              <i class="far fa-bookmark" aria-hidden="true"></i>
+            </button>
             <img src="images/hellowd.jpg" alt="Hello Web Design book cover by Tracy Osborn" class="book-card__image">
           </div>
           <div class="book-card__content">
@@ -90,6 +93,9 @@
       <article class="book-card" aria-labelledby="book-title-2">
         <div class="book-card__inner">
           <div class="book-card__cover">
+            <button class="book-card__save" aria-label="Save this book">
+              <i class="far fa-bookmark" aria-hidden="true"></i>
+            </button>
             <img src="images/helloavatar.jpg" alt="Hello Avatar book cover by Ben Coleman" class="book-card__image">
           </div>
           <div class="book-card__content">
@@ -106,12 +112,14 @@
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
-        </div>
       </article>
 
       <article class="book-card" aria-labelledby="book-title-3">
         <div class="book-card__inner">
           <div class="book-card__cover">
+            <button class="book-card__save" aria-label="Save this book">
+              <i class="far fa-bookmark" aria-hidden="true"></i>
+            </button>
             <img src="images/helloawesome.jpg" alt="Hello, My Name is Awesome book cover by Alexandra Watkins" class="book-card__image">
           </div>
           <div class="book-card__content">
@@ -127,14 +135,15 @@
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
-          </div>
-        </div>
-      </article>
+          </article>
 
       <article class="book-card" aria-labelledby="book-title-4">
         <div class="book-card__inner">
           <div class="book-card__cover">
-            <img src="images/helloworld.jpg" alt="Hello World book cover by Alice Rawsthorn" class="book-card__image">
+            <button class="book-card__save" aria-label="Save this book">
+              <i class="far fa-bookmark" aria-hidden="true"></i>
+            </button>
+            <img src="images/helloworld.jpg" alt="Hello World book cover by Jennifer Robson" class="book-card__image">
           </div>
           <div class="book-card__content">
             <div class="book-card__body">
