--- a/confirmation.html
+++ b/confirmation.html
@@ -36,7 +36,7 @@
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-to-collect">
         <h2 id="confirmation-to-collect">To collect:</h2>
-        <div class="confirmation-card__row">
+        <div>
           <i class="fas fa-book-open" aria-hidden="true"></i>
           <p>Hello Web Designby Tracy Osborn</p>
         </div>
@@ -44,7 +44,7 @@
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-library">
         <h2 id="confirmation-library">From MMU Library:</h2>
-        <div class="confirmation-card__row">
+        <div>
           <i class="fas fa-location-dot" aria-hidden="true"></i>
           <p>John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
         </div>
@@ -52,7 +52,7 @@
 
       <div class="confirmation-card__group" aria-labelledby="confirmation-when">
         <h2 id="confirmation-when">When will my order be ready to collect?</h2>
-        <div class="confirmation-card__row">
+        <div class>
           <i class="far fa-clock" aria-hidden="true"></i>
           <p>Use the Click and Collect tracking in your library account to find out when your item will be ready to collect.</p>
         </div>
