--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
           </div>
+        </div>
       </article>
 
       <article class="book-card" aria-labelledby="book-title-3">
@@ -135,7 +136,9 @@
               <a class="btn btn--secondary" href="" aria-label="View details">View details</a>
               <a class="btn btn--primary" href="request.html" aria-label="Reserve this book">Reserve item</a>
             </div>
-          </article>
+          </div>
+        </div>
+      </article>
 
       <article class="book-card" aria-labelledby="book-title-4">
         <div class="book-card__inner">
@@ -161,6 +164,10 @@
           </div>
         </div>
       </article>
+
+      <div class="books__more">
+        <button class="btn btn--ghost" aria-label="See more results">See more</button>
+      </div>
     </section>
   </main>
 
