--- a/request.html
+++ b/request.html
@@ -61,8 +61,14 @@
     <div class="collection_info">
         <h2>Collection Information</h2>
         <div class="collection__details">
-        <p><i class="far fa-clock" aria-hidden="true"></i> Open Today: 9am–7pm</p>
-        <p><i class="fas fa-location-dot" aria-hidden="true"></i> John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
+          <div>
+          <i class="far fa-clock" aria-hidden="true"></i> 
+          <p>Open Today: 9am–7pm</p>
+          </div>
+          <div> 
+          <i class="fas fa-location-dot" aria-hidden="true"></i>
+          <p> John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
+          </div>
         </div>
     </div>
 
