--- a/confirmation.html
+++ b/confirmation.html
@@ -30,6 +30,10 @@
 
   <!-- Main Content -->
   <main class="main confirmation-page">
+    <a class="back-link" href="request.html" aria-label="Back to request">
+      <i class="fas fa-arrow-left" aria-hidden="true"></i>
+      <span>Back</span>
+    </a>
     <section class="confirmation-card" aria-labelledby="confirmation-title">
       <div class="confirmation-card__emoji" role="img" aria-label="Party popper">🎉</div>
       <h1 id="confirmation-title">Your request has been placed!</h1>
