--- a/confirmation.html
+++ b/confirmation.html
@@ -38,29 +38,29 @@
       <div class="confirmation-card__emoji" role="img" aria-label="Party popper">🎉</div>
       <h1 id="confirmation-title">Your request has been placed!</h1>
 
-      <div class="confirmation-card__group" aria-labelledby="confirmation-to-collect">
+      <section class="confirmation-card__group" aria-labelledby="confirmation-to-collect">
         <h2 id="confirmation-to-collect">To collect:</h2>
         <div>
           <i class="fas fa-book-open" aria-hidden="true"></i>
           <p>Hello Web Designby Tracy Osborn</p>
         </div>
-      </div>
+      </section>
 
-      <div class="confirmation-card__group" aria-labelledby="confirmation-library">
+      <section class="confirmation-card__group" aria-labelledby="confirmation-library">
         <h2 id="confirmation-library">From MMU Library:</h2>
         <div>
           <i class="fas fa-location-dot" aria-hidden="true"></i>
           <p>John Dalton Building, Chester Street, Manchester, M1 5GD (Oxford Road Entrance)</p>
         </div>
-      </div>
+      </section>
 
-      <div class="confirmation-card__group" aria-labelledby="confirmation-when">
+      <section class="confirmation-card__group" aria-labelledby="confirmation-when">
         <h2 id="confirmation-when">When will my order be ready to collect?</h2>
-        <div class>
+        <div>
           <i class="far fa-clock" aria-hidden="true"></i>
           <p>Use the Click and Collect tracking in your library account to find out when your item will be ready to collect.</p>
         </div>
-      </div>
+      </section>
 
       <div class="confirmation-card__actions">
         <button class="btn btn--primary btn--primary-inverse" aria-label="Track my order">Track my order</button>
