--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <ol>
         <li><a href="#">Home</a></li>
-        <li><a href="index.html" aria-current="page">Library Search</a></li>
+        <li><a href="#">Library Search</a></li>
       </ol>
     </nav>
 
