--- a/request.html
+++ b/request.html
@@ -35,7 +35,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="index.html">Library Search</a></li>
         <li><a href="#">Hello Web Design</a></li>
-        <li><a href="request.html" aria-current="page">Item Request</a></li>
+        <li><a href="#">Item Request</a></li>
       </ol>
     </nav>
 
@@ -53,6 +53,7 @@
             <div class="request-card__details">
               <p><strong>Publication:</strong> No Starch Press, [2021]</p>
               <p><strong>ISBN:</strong> 978-1-78528-716-2</p>
+            </div>
           </div>
         </div>
       </article>
